src/test/compile-fail/infinite-vec-type-recursion.rs
// -*- rust -*-
// error-pattern: illegal recursive type

type x = vec[x];

fn main() { let b: x = []; }